--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1064,14 +1064,13 @@ main {
 
 .top-link {
     display: flex;
-    justify-content: center;
     align-items: flex-start;
     gap: 0.2rem;
     font-size: 1.3rem;
     color: var(--lighter-orange);
     text-decoration: none;
     font-weight: 500;
-    margin-bottom: 3.188rem;
+    margin: 0 auto 3.188rem;
     width: fit-content;
 }
 
@@ -1129,6 +1128,7 @@ main {
 @media screen and (min-width: 48em) {
     .top-link {
         justify-content: flex-start;
+        margin: 0 0 3.188rem;
     }
 
     .contact-links {
