--- a/styles/styles.css
+++ b/styles/styles.css
@@ -84,7 +84,6 @@ header {
 .desktop-nav-menu {
     display: none;
     margin-left: auto;
-    padding: 0 48px;
 }
 
 @media screen and (min-width: 63.125em) {
@@ -97,15 +96,18 @@ header {
 
 .desktop-nav-menu ul {
     display: flex;
-    gap: 2.7rem;
     list-style-type: none;
+    width: 645px;
+    padding-right: 22px;
 
     & li {
         height: 60px;
+        width: 100%;
     }
 
     & a {
         display: flex;
+        justify-content: center;
         align-items: center;
         height: 100%;
         color: white;
@@ -258,10 +260,6 @@ header {
         gap: 0.8rem;
 
         & li img {
-            width: 1.1rem;
-        }
-
-        & li:first-child img {
             width: 1rem;
         }
 
