Update magnifying glass icon on desktop to more closely match provided image

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -263,6 +263,10 @@ header {
             width: 1rem;
         }
 
+        & li:first-child img {
+            width: 0.95rem;
+        }
+
         & li:last-child img {
             width: 1.4rem;
         }
